--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
    
   </head>
   <body>
-    <div>
+    <!-- <div> -->
       <!-- <p id="result">Result</p> -->
       <!-- <p id="result1">Result</p> -->
       <!-- <span id="h"></span> -->
       <!-- <span id="m"></span> -->
       <!-- <span id="s"></span> -->
       <!-- <button id="btn">Click</button> -->
-      <h id="data"></h>
+      <!-- <h id="data"></h>
       <p class="result"></p>
 
       <input type="text" id="inData">
       <button id="btn">Add</button>
-    </div>
+    </div> -->
+
+    <p class="res1"></p>
+    <p class="res2"></p>
+
+    <button class="btn1">Alphabetically</button>
+    <button class="btn2">Numerically</button>
 
     <script src="app.js"></script>
   </body>
