add more dummy code

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <p class="res1"></p>
     <p class="res2"></p>
 
-    <button class="btn1">Alphabetically</button>
-    <button class="btn2">Numerically</button>
+    <button class="btn1">Random</button>
+    <!-- <button class="btn2">Numerically</button> -->
 
     <script src="app.js"></script>
   </body>
