--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div> -->
 
     <p class="res1"></p>
+    <h1>sorted data</h1>
     <p class="res2"></p>
 
     <button class="btn1">Random</button>
