--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <h1>sorted data</h1>
     <p class="res2"></p>
 
+    <button onclick="sumFunn()">Click</button>
+
     <button class="btn1">Random</button>
     <!-- <button class="btn2">Numerically</button> -->
 
